convert to USENIX style file

--- a/sigproc.bib
+++ b/sigproc.bib
@@ -45,7 +45,7 @@
 @misc{ingram10,
   author = {Ingram, M.},
   title = {Mary Meeker: Mobile Internet Will Soon Overtake Fixed Internet},
-  howpublished = {\url{http://gigaom.com/2010/04/12/mary-meeker-mobile-internet-will-soon-overtake- fixed-internet/}},
+  howpublished = {\url{http://gigaom.com/2010/04/12/mary-meeker-} \url{mobile-internet-will-soon-overtake- fixed-internet/}},
   year = {2010},
 },
                   
