--- a/lc.tex
+++ b/lc.tex
@@ -1,122 +1,24 @@
-% This is "sig-alternate.tex" V2.0 May 2012
-% This file should be compiled with V2.5 of "sig-alternate.cls" May 2012
-%
-% This example file demonstrates the use of the 'sig-alternate.cls'
-% V2.5 LaTeX2e document class file. It is for those submitting
-% articles to ACM Conference Proceedings WHO DO NOT WISH TO
-% STRICTLY ADHERE TO THE SIGS (PUBS-BOARD-ENDORSED) STYLE.
-% The 'sig-alternate.cls' file will produce a similar-looking,
-% albeit, 'tighter' paper resulting in, invariably, fewer pages.
-%
-% ----------------------------------------------------------------------------------------------------------------
-% This .tex file (and associated .cls V2.5) produces:
-%       1) The Permission Statement
-%       2) The Conference (location) Info information
-%       3) The Copyright Line with ACM data
-%       4) NO page numbers
-%
-% as against the acm_proc_article-sp.cls file which
-% DOES NOT produce 1) thru' 3) above.
-%
-% Using 'sig-alternate.cls' you have control, however, from within
-% the source .tex file, over both the CopyrightYear
-% (defaulted to 200X) and the ACM Copyright Data
-% (defaulted to X-XXXXX-XX-X/XX/XX).
-% e.g.
-% \CopyrightYear{2007} will cause 2007 to appear in the copyright line.
-% \crdata{0-12345-67-8/90/12} will cause 0-12345-67-8/90/12 to appear in the copyright line.
-%
-% ---------------------------------------------------------------------------------------------------------------
-% This .tex source is an example which *does* use
-% the .bib file (from which the .bbl file % is produced).
-% REMEMBER HOWEVER: After having produced the .bbl file,
-% and prior to final submission, you *NEED* to 'insert'
-% your .bbl file into your source .tex file so as to provide
-% ONE 'self-contained' source file.
-%
-% ================= IF YOU HAVE QUESTIONS =======================
-% Questions regarding the SIGS styles, SIGS policies and
-% procedures, Conferences etc. should be sent to
-% Adrienne Griscti (griscti@acm.org)
-%
-% Technical questions _only_ to
-% Gerald Murray (murray@hq.acm.org)
-% ===============================================================
-%
-% For tracking purposes - this is V2.0 - May 2012
-
-\documentclass{sig-alternate}
+\documentclass[letterpaper,twocolumn,10pt]{article}
+\usepackage{usenix,epsfig,url}
+\usepackage[font={small,it}]{caption}
 \usepackage{url} 
 \urlstyle{sf}
 
 \begin{document}
-%
-% --- Author Metadata here ---
-\conferenceinfo{INFLOW'13,} {November 3, 2013, Pennsylvania, USA.} 
-\CopyrightYear{2013}
-\crdata{978-1-4503-2462-5}
-\clubpenalty=10000
-\widowpenalty = 10000
 
 \title{\Large \bf Log-Structured Cache: Trading Hit-Rate for Storage Performance
   (and winning) in Mobile Devices}
-%
-% You need the command \numberofauthors to handle the 'placement
-% and alignment' of the authors beneath the title.
-%
-% For aesthetic reasons, we recommend 'three authors at a time'
-% i.e. three 'name/affiliation blocks' be placed beneath the title.
-%
-% NOTE: You are NOT restricted in how many 'rows' of
-% "name/affiliations" may appear. We just ask that you restrict
-% the number of 'columns' to three.
-%
-% Because of the available 'opening page real-estate'
-% we ask you to refrain from putting more than six authors
-% (two rows with three columns) beneath the article title.
-% More than six makes the first-page appear very cluttered indeed.
-%
-% Use the \alignauthor commands to handle the names
-% and affiliations for an 'aesthetic maximum' of six authors.
-% Add names, affiliations, addresses for
-% the seventh etc. author(s) as the argument for the
-% \additionalauthors command.
-% These 'additional authors' will be output/set for you
-% without further effort on your part as the last section in
-% the body of your article BEFORE References or any Appendices.
 
-\numberofauthors{2} %  in this sample file, there are a *total*
-% of EIGHT authors. SIX appear on the 'first-page' (for formatting
-% reasons) and the remaining two appear in the \additionalauthors section.
-%
-\author{
-% You can go ahead and credit any number of authors here,
-% e.g. one 'row of three' or two rows (consisting of one row of three
-% and a second row of one, two or three).
-%
-% The command \alignauthor (no curly braces needed) should
-% precede each author name, affiliation/snail-mail address and
-% e-mail address. Additionally, tag each line of
-% affiliation/address with \affaddr, and tag the
-% e-mail address with \email.
-%
-% 1st. author
-\alignauthor
-Abutalib Aghayev\\
-       \affaddr{College of Computer and Information Science}\\
-       \affaddr{Northeastern University}\\
-       \affaddr{Boston, MA}\\
-       \email{aghayev@ccs.neu.edu}
-% 2nd. author
-\alignauthor
-Peter Desnoyers\\
-       \affaddr{College of Computer and Information Science}\\
-       \affaddr{Northeastern University}\\
-       \affaddr{Boston, MA}\\
-       \email{pjd@ccs.neu.edu}
-}
+% \author{
+%   {\rm Abutalib Aghayev, Peter Desnoyers}\\
+%  Northeastern University
+% }
+\date{}
 \maketitle
-\begin{abstract}
+
+\thispagestyle{empty}
+
+\subsection*{Abstract}
 Browser caches are typically designed to maximize hit rates---if all other
 factors are held equal, then the highest hit rate will result in the highest
 performance. However, if the performance of the underlying cache storage
@@ -141,15 +43,6 @@ measured on a Nexus 7 tablet), while in the worst case increasing miss rate by
 less than 3\% (from 65\% to 68\%). For network bandwidths of 1\,Mb/s or higher
 the increased cache performance more than makes up for the decrease in hit rate;
 the effect is more pronounced when examining $95^{th}$ percentile delays.
-\end{abstract}
-
-% A category with the (minimum) three required fields
-\category{D.4.2}{Operating Systems}{Storage Management}[Allocation/deallocation
-  strategies]
-
-\terms{Performance, Design, Experimentation}
-
-\keywords{Log-structured, cache, mobile browser, NAND flash, Chromium, Android}
 
 \section{Introduction}
 
@@ -676,17 +569,7 @@ We would like to thank Ricardo Vargas of Google Chrome team for answering our
 questions related to Chromium disk cache and helping us with performing
 experiments on Chromium's existing cache.
 
-%
-% The following two commands are all you need in the
-% initial runs of your .tex file to
-% produce the bibliography for the citations in your paper.
-\bibliographystyle{abbrv}
+\bibliographystyle{acm}
 \bibliography{sigproc}  % sigproc.bib is the name of the Bibliography in this case
-% You must have a proper ".bib" file
-%  and remember to run:
-% latex bibtex latex latex
-% to resolve all references
-%
-% ACM needs 'a single self-contained file'!
-%
+
 \end{document}
