--- a/sigproc.bib
+++ b/sigproc.bib
@@ -173,3 +173,14 @@ tems},
         year   = 2010,
         number = {JESD84-A441}
 }
+
+@incollection{corbato_paging_1969,
+	title = {A Paging Experiment with the Multics System},
+	urldate = {2010-07-08},
+	booktitle = {In Honor of Philip M Morse},
+	publisher = {{MIT} Press},
+	author = {Corbato, F. J},
+	editor = {Feshbach, Herman and Ingard, K. Uno},
+	year = {1969},
+	pages = {217--228}
+}
