--- a/lc.tex
+++ b/lc.tex
@@ -202,7 +202,7 @@ advantage of the volatile nature of cached data. Segments are selected
 for cleaning in FIFO order, and within each segment we track which
 objects have been used since the segment was written. Those objects
 are copied back to the write frontier, much as pages with the A bit
-set are skipped in the CLOCK replacement algorithm \cite{clock}.
+set are skipped in the CLOCK replacement algorithm \cite{corbato_paging_1969}.
 
 \subsection{Hit rate vs. sequentiality trade-offs}
 
