--- a/sigproc.bib
+++ b/sigproc.bib
@@ -1,9 +1,16 @@
 @inproceedings{hashcache,
-  author = {Badam, A. and Park, K. and Pai, V.S. and Peterson, L.L.},
-  title = {{HashCache: Cache Storage for the Next Billion.}},
-  booktitle = {NSDI},                  
-  year = 2009,
-},
+  address =	 {Berkeley, {CA}, {USA}},
+  series =	 {{NSDI'09}},
+  title =	 {{HashCache:} cache storage for the next billion},
+  url =		 {http://dl.acm.org/citation.cfm?id=1558977.1558986},
+  booktitle =	 {Proc. 6th {USENIX} Symposium on Networked Systems Design and
+                  Implementation},
+  publisher =	 {{USENIX} Association},
+  author =	 {Badam, Anirudh and Park, {KyoungSoo} and Pai, Vivek S. and
+                  Peterson, Larry L.},
+  year =	 2009,
+  pages =	 {123–136}
+}
 
 @article{rosenblum92,
   author = {Rosenblum, M. and Ousterhout, J.},
@@ -17,7 +24,7 @@
 @inproceedings{kim12,
   author = {Kim, H. and Agrawal, N. and Ungureanu, C.},
   title = {{Revisiting Storage for Smartphones.}},
-  booktitle = {FAST},
+  booktitle = {{Proc. 10th USENIX Conference on File and Storage Technologies}},
   year = 2012,
 },
 
@@ -35,13 +42,6 @@
   year = {2010},
 },
 
-@misc{pjd12,
-  author = {Desnoyers, P.},
-  title = {{Analytic Modeling of SSD Write Performance.}},
-  howpublished = {\url\{http://www.ccs.neu.edu/home/pjd/papers/pjd-systor12.pdf}},
-  year = {2012},
-},
-                  
 @misc{ingram10,
   author = {Ingram, M.},
   title = {Mary Meeker: Mobile Internet Will Soon Overtake Fixed Internet},
@@ -72,15 +72,18 @@
 },
 
 @article{Kim2002:FTL,
-  title =        {A space-efficient flash translation layer for compactflash sys
-tems},
-  journal =      {{IEEE} Transactions on Consumer Electronics},
-  volume = 48,
-  number = 2,
-  author =       {J. Kim and J. M. Kim and S. Noh and S. L. Min and Y. Cho},
-  year =         2002,
-  pages =        {366--375}
-},
+  title =	 {A space-efficient flash translation layer for {CompactFlash}
+                  systems},
+  volume =	 48,
+  issn =	 {0098-3063},
+  doi =		 {10.1109/TCE.2002.1010143},
+  number =	 2,
+  journal =	 {{IEEE} Transactions on Consumer Electronics},
+  author =	 {Kim, Jesung and Jong Min Kim and Noh, {S.H.} and Sang Lyul Min
+                  and Yookun Cho},
+  year =	 2002,
+  pages =	 {366--375}
+}
 
 @InProceedings{boboila_performance_2011,
   title =        {Performance Models of Flash-based {Solid-State} Drives for
@@ -113,11 +116,10 @@ tems},
 },
 
 @inproceedings{wang_how_2011,
-	address = {New York, {NY}, {USA}},
 	title = {How effective is mobile browser cache?},
-	location = {Las Vegas, Nevada, {USA}},
+	location = {Las Vegas, Nevada},
 	doi = {10.1145/2030686.2030693},
-	booktitle = {Proceedings of the 3rd {ACM} workshop on Wireless of the students, by the students, for the students},
+	booktitle = {Proc. 3rd {ACM} workshop on Wireless of the students, by the students, for the students},
 	publisher = {{ACM}},
 	author = {Wang, Zhen and Lin, Felix Xiaozhu and Zhong, Lin and Chishtie, Mansoor},
 	year = {2011},
@@ -125,12 +127,10 @@ tems},
 },
 
 @inproceedings{qian_web_2012,
-	address = {New York, {NY}, {USA}},
 	series = {{MobiSys} '12},
 	title = {Web caching on smartphones: ideal vs. reality},
-	location = {Low Wood Bay, Lake District, {UK}},
 	doi = {10.1145/2307636.2307649},
-	booktitle = {Proceedings of the 10th international conference on Mobile systems, applications, and services},
+	booktitle = {Proc. Int'l Conference on Mobile Systems, Applications, and Services},
 	publisher = {{ACM}},
 	author = {Qian, Feng and Quah, Kee Shen and Huang, Junxian and Erman, Jeffrey and Gerber, Alexandre and Mao, Zhuoqing and Sen, Subhabrata and Spatscheck, Oliver},
 	year = {2012},
@@ -143,7 +143,7 @@ tems},
 	doi = {10.1145/505696.505701},
 	number = {5},
 	urldate = {2013-01-31},
-	journal = {{SIGCOMM} Comput. Commun. Rev.},
+	journal = {{SIGCOMM} Computer Communications Review},
 	author = {Wang, Jia},
 	month = oct,
 	year = {1999},
@@ -158,7 +158,7 @@ tems},
 	doi = {10.1145/954339.954341},
 	number = {4},
 	urldate = {2013-01-31},
-	journal = {{ACM} Comput. Surv.},
+	journal = {{ACM} Computing Surveys},
 	author = {Podlipnig, Stefan and B\"{o}sz\"{o}rmenyi, Laszlo},
 	month = dec,
 	year = {2003},
@@ -167,8 +167,8 @@ tems},
 
 @TechReport{emmc_2010,
         author = {{JEDEC} Solid State Technology Association},
-        title  = {EMBEDDED MULTIMEDIACARD(e-MMC) eMMC/CARD PRODUCT
-                  STANDARD, HIGH CAPACITY},
+        title  = {{Embedded Multimediacard(e-MMC) eMMC/Card Product
+                  Standard, High Capacity}},
         month  = mar,
         year   = 2010,
         number = {JESD84-A441}
